--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   };
 
   const curriculum = {
-    'Year 1': {
+    'Freshman': {
       Fall: [
         { code: 'COSC 101', name: 'Foundations of Computer Science', credits: 3 },
         { code: 'MATH 111', name: 'Calculus I', credits: 4 },
@@ -291,7 +291,7 @@
         { code: 'ENGR 202', name: 'Data Science & AI', credits: 3 }
       ]
     },
-    'Year 2': {
+    'Sophomore': {
       Fall: [
         { code: 'ECCE 230', name: 'Object-Oriented Programming', credits: 4 },
         { code: 'COSC 201', name: 'Computer Systems Organization', credits: 3 },
@@ -306,7 +306,7 @@
         { code: 'ENGR 399', name: 'Internship', credits: 1 }
       ]
     },
-    'Year 3': {
+    'Junior': {
       Fall: [
         { code: 'COSC 320', name: 'Principles of Programming Languages', credits: 3 },
         { code: 'ECCE 354', name: 'Operating Systems', credits: 3 },
@@ -321,7 +321,7 @@
         { code: 'GENS 300', name: 'Career Preparation', credits: 1 }
       ]
     },
-    'Year 4': {
+    'Senior': {
       Fall: [
         { code: 'COSC 497', name: 'Senior Design Project I', credits: 3 },
         { code: 'HUMA XXX', name: 'Islamic/Arabic Studies Elective', credits: 3 },
