--- a/index.html
+++ b/index.html
@@ -262,119 +262,404 @@
     Hover vs. click toggling, etc.
   */
 
+// -----------------------------------------------------------
+// How courses unlock each other (prerequisites and successors)
+// -----------------------------------------------------------
+// -----------------------------------------------------------
+// How courses unlock each other (prerequisites and successors)
+// -----------------------------------------------------------
   const courseRelationships = {
-    // First Year
-    'COSC 101': { prereqs: [], unlocks: ['COSC 114'] },
-    'COSC 114': { prereqs: ['COSC 101'], unlocks: ['ECCE 230'] },
-    'MATH 111': { prereqs: [], unlocks: ['MATH 112'] },
-    'MATH 112': { prereqs: ['MATH 111'], unlocks: ['MATH 204', 'MATH 232'] },
-    'ENGL 101': { prereqs: [], unlocks: ['ENGL 102'] },
-    'ENGL 102': { prereqs: ['ENGL 101'], unlocks: [] },
-    'CHEM 115': { prereqs: [], unlocks: [] },
-    'PHYS 121': { prereqs: [], unlocks: [] },
-    'GENS 101': { prereqs: [], unlocks: [] },
-    'ENGR 202': { prereqs: [], unlocks: [] },
+    // ----------------
+    //     First Year
+    // ----------------
+    'COSC 114': {
+      prereqs: [],
+      unlocks: ['COSC 101', 'ECCE 230'] // From the diagram: arrow from COSC 114 → COSC 101 and COSC 114 → ECCE 230
+    },
+    'COSC 101': {
+      prereqs: ['COSC 114'],
+      unlocks: ['COSC 201', 'COSC 301'] // Arrow from COSC 101 → COSC 201
+    },
+    'MATH 111': {
+      prereqs: [],
+      unlocks: ['MATH 112'] // Arrow from MATH 111 → MATH 112
+    },
+    'MATH 112': {
+      prereqs: ['MATH 111'],
+      // Diagram fans out from MATH 112 to multiple second-year math courses
+      unlocks: ['MATH 204', 'MATH 232', 'MATH 234', 'MATH 242', 'MATH 214']
+    },
+    'ENGL 101': {
+      prereqs: [],
+      unlocks: ['ENGL 102'] // Arrow from ENGL 101 → ENGL 102
+    },
+    'ENGL 102': {
+      prereqs: ['ENGL 101'],
+      unlocks: []
+    },
+    'CHEM 115': {
+      prereqs: [],
+      unlocks: []
+    },
+    'PHYS 121': {
+      prereqs: ['MATH 111'],
+      unlocks: []
+    },
+    'GENS 101': {
+      prereqs: [],
+      unlocks: []
+    },
+    'GENS 100': {
+      prereqs: [],
+      unlocks: ['GENS 300']
+    },
+    // Freshman-summer humanities elective
+    'HUMA XXX (Islamic/Arabic)': {
+      prereqs: [],
+      unlocks: []
+    },
   
-    // Second Year
-    'ECCE 230': { prereqs: ['COSC 114'], unlocks: ['COSC 201', 'ECCE 336', 'ECCE 342'] },
-    'COSC 201': { prereqs: ['ECCE 230'], unlocks: ['ECCE 354', 'COSC 320'] },
-    'MATH 204': { prereqs: ['MATH 112'], unlocks: [] },
-    'MATH 232': { prereqs: ['MATH 112'], unlocks: [] },
-    'MATH 234': { prereqs: [], unlocks: [] },
-    'MATH 242': { prereqs: [], unlocks: [] },
-    'ECCE 336': { prereqs: ['ECCE 230'], unlocks: ['COSC 497'] },
-    'ECCE 342': { prereqs: ['ECCE 230'], unlocks: ['COSC 312'] },
-    'MATH 214': { prereqs: [], unlocks: [] },
+    // ----------------
+    //    Second Year
+    // ----------------
+    'ECCE 230': {
+      prereqs: ['COSC 114'],
+      unlocks: ['MATH 232', 'COSC 310', 'ECCE 336'] 
+      // From diagram: ECCE 230 → COSC 201, ECCE 230 → ECCE 342, ECCE 230 → ECCE 336
+    },
+    'COSC 201': {
+      prereqs: ['COSC 101'],
+      unlocks: ['ECCE 354', 'ECCE 356']
+      // Arrows from COSC 201 → COSC 301, ECCE 354, COSC 320, ECCE 356
+    },
+    'MATH 204': {
+      prereqs: ['MATH 112'],
+      unlocks: ['MATH 214']
+    },
+    'MATH 234': {
+      prereqs: ['MATH 112'],
+      unlocks: ['COSC 301']
+    },
+    'MATH 242': {
+      prereqs: ['MATH 112'],
+      unlocks: ['MATH 214']
+    },
+    'MATH 232': {
+      prereqs: ['ECCE 230'],
+      unlocks: []
+    },
+    'MATH 214': {
+      prereqs: ['MATH 242', 'MATH 204', 'COSC 114'],
+      unlocks: []
+    },
+    'ECCE 336': {
+      prereqs: ['ECCE 230'],
+      unlocks: ['ECCE 434'] // Arrow from ECCE 336 → COSC 497
+    },
+    'COSC 310': {
+      prereqs: ['ECCE 230'],
+      unlocks: ['COSC 312'] // Arrow from ECCE 342 → COSC 312
+    },
+    'ENGR 202': {
+      prereqs: ['COSC 114'],
+      unlocks: []
+    },
+    // Sophomore-summer humanities elective
+    'HUMA XXX (UAE Studies)': {
+      prereqs: [],
+      unlocks: []
+    },
   
-    // Third Year
-    'COSC 301': { prereqs: [], unlocks: [] },
-    'COSC 320': { prereqs: ['COSC 201'], unlocks: ['COSC 498'] },
-    'ECCE 354': { prereqs: ['COSC 201'], unlocks: [] },
-    'COSC 330': { prereqs: [], unlocks: [] },
-    'ECCE 356': { prereqs: [], unlocks: [] },
-    'COSC 312': { prereqs: ['ECCE 342'], unlocks: [] },
-    'COSC 340': { prereqs: [], unlocks: [] },
-    'ECCE 434': { prereqs: [], unlocks: [] },
+    // ----------------
+    //     Third Year
+    // ----------------
+    'BUSS 322': {
+      prereqs: [],
+      unlocks: []
+    },
+    'COSC 301': {
+      prereqs: ['COSC 101', 'MATH 234'],
+      unlocks: ['COSC 312', 'COSC 320']
+    },
+    'ECCE 354': {
+      prereqs: ['COSC 201'],
+      unlocks: ['COSC 340']
+    },
+    'COSC 320': {
+      prereqs: ['COSC 301'],
+      unlocks: [] // Diagram shows arrow from COSC 320 → COSC 498
+    },
+    'COSC 312': {
+      prereqs: ['COSC 310', 'COSC 301'],
+      unlocks: ['COSC 497']
+    },
+    'COSC 330': {
+      prereqs: ['ECCE 230'],
+      unlocks: []
+    },
+    'COSC 340': {
+      prereqs: ['ECCE 354'],
+      unlocks: []
+    },
+    'ECCE 356': {
+      prereqs: ['COSC 201'],
+      unlocks: []
+    },
+    'GENS 300': {
+      prereqs: ['GENS 100'],
+      unlocks: ['GENS 400']
+    },
+    'ECCE 434': {
+      prereqs: ['ECCE 336'],
+      unlocks: []
+    },
   
-    // Fourth Year
-    'COSC 497': { prereqs: ['ECCE 336'], unlocks: ['COSC 498'] },
-    'COSC 498': { prereqs: ['COSC 497', 'COSC 320'], unlocks: [] }
+    // ----------------
+    //    Fourth Year
+    // ----------------
+    'COSC 497': {
+      prereqs: ['COSC 312'],
+      unlocks: ['COSC 498'] // Arrow from COSC 497 → COSC 498
+    },
+    'COSC 498': {
+      prereqs: ['COSC 497'],
+      unlocks: []
+    },
+    'BUSS XXX': {
+      prereqs: [],
+      unlocks: []
+    },
+    'GENS 400': {
+      prereqs: ['GENS 300'],
+      unlocks: []
+    },
+    'TECHNICAL ELECTIVE': {
+      prereqs: [],
+      unlocks: []
+    },
+    'ENGR 399': {
+      prereqs: [],
+      unlocks: []
+    }
   };
-
+  
+  // -----------------------------------------------
+  // Full semester-by-semester layout (the curriculum)
+  // -----------------------------------------------
   const curriculum = {
-    'Freshman': {
+    Freshman: {
       Fall: [
-        { code: 'COSC 101', name: 'Foundations of Computer Science', credits: 3 },
-        { code: 'MATH 111', name: 'Calculus I', credits: 4 },
-        { code: 'ENGL 101', name: 'Academic English I', credits: 3 },
-        { code: 'CHEM 115', name: 'General Chemistry I', credits: 4 },
         { code: 'GENS 101', name: 'Grand Challenges', credits: 4 },
+        { code: 'ENGL 101', name: 'Academic English I', credits: 3 },
+        { code: 'MATH 111', name: 'Calculus I', credits: 4 },
+        { code: 'CHEM 115', name: 'General Chemistry I', credits: 4 },
         { code: 'GENS 100', name: 'Academic Development & Success', credits: 1 }
       ],
       Spring: [
-        { code: 'COSC 114', name: 'Introduction to Computing Using Python', credits: 4 },
-        { code: 'MATH 112', name: 'Calculus II', credits: 4 },
         { code: 'ENGL 102', name: 'Academic English II', credits: 3 },
-        { code: 'PHYS 121', name: 'University Physics I', credits: 4 }
+        { code: 'MATH 112', name: 'Calculus II', credits: 4 },
+        { code: 'PHYS 121', name: 'University Physics I', credits: 4 },
+        { code: 'COSC 114', name: 'Introduction to Computing Using Python', credits: 4 },
+        {
+          code: 'BUSS XXX',
+          name: 'Business Elective',
+          credits: 3
+        }
       ],
       Summer: [
-        { code: 'ENGR 202', name: 'Data Science & AI', credits: 3 }
+        {
+          code: 'HUMA/BUSS XXX',
+          name: 'Any HUMA/BUSS Elective',
+          credits: 3
+        }
       ]
     },
-    'Sophomore': {
+  
+    Sophomore: {
       Fall: [
+        { code: 'COSC 101', name: 'Foundations of Computer Science', credits: 3 },
         { code: 'ECCE 230', name: 'Object-Oriented Programming', credits: 4 },
-        { code: 'COSC 201', name: 'Computer Systems Organization', credits: 3 },
         { code: 'MATH 204', name: 'Linear Algebra', credits: 3 },
-        { code: 'MATH 232', name: 'Engineering Mathematics', credits: 3 }
+        {
+          code: 'MATH 242',
+          name: 'Introduction to Probability and Statistics',
+          credits: 3
+        },
+        { code: 'ENGR 202', name: 'Data Science & AI', credits: 3 }
       ],
       Spring: [
-        { code: 'ECCE 336', name: 'Introduction to Software Engineering', credits: 3 },
-        { code: 'ECCE 342', name: 'Data Structures and Algorithms', credits: 3 },
-        { code: 'MATH 234', name: 'Discrete Mathematics', credits: 3 },
-        { code: 'MATH 242', name: 'Introduction to Probability and Statistics', credits: 3 },
-        { code: 'MATH 214', name: 'Mathematical and Statistical Software', credits: 3 }
+        {
+          code: 'COSC 201',
+          name: 'Computer Systems Organization',
+          credits: 3
+        },
+        {
+          code: 'ECCE 342',
+          name: 'Data Structure and Algorithms',
+          credits: 3
+        },
+  
+        { code: 'MATH 232', name: 'Engineering Mathematics', credits: 3 },
+        {
+          code: 'MATH 214',
+          name: 'Mathematical and Statistical Software',
+          credits: 3
+        },
+        { code: 'MATH 234', name: 'Discrete Mathematics', credits: 3 }
+  
       ],
       Summer: [
-        { code: 'ENGR 399', name: 'Internship', credits: 1 }
+        {
+          code: 'HUMA XXX (UAE Studies)',
+          name: 'UAE Studies Elective',
+          credits: 3
+        }
       ]
     },
-    'Junior': {
+  
+    Junior: {
       Fall: [
-        { code: 'COSC 301', name: 'Automata, Computability and Complexity', credits: 3 },
-        { code: 'COSC 320', name: 'Principles of Programming Languages', credits: 3 },
-        { code: 'ECCE 354', name: 'Operating Systems', credits: 3 },
-        { code: 'COSC 330', name: 'Introduction to Artificial Intelligence', credits: 3 },
-        { code: 'ECCE 356', name: 'Computer Networks', credits: 4 }
+        {
+          code: 'BUSS 322',
+          name: 'Fundamentals of Innovation and Entrepreneurship',
+          credits: 3
+        },
+        {
+          code: 'COSC 301',
+          name: 'Automata, Computability and Complexity',
+          credits: 3
+        },
+  
+        {
+          code: 'ECCE 336',
+          name: 'Introduction to Software Engineering',
+          credits: 3
+        },
+  
+        {
+          code: 'ECCE 354',
+          name: 'Operating Systems',
+          credits: 3
+        },
+  
+        {
+          code: 'ECCE 356',
+          name: 'Computer Networks',
+          credits: 4
+        },
+  
+  
+  
       ],
       Spring: [
-        { code: 'COSC 312', name: 'Design and Analysis of Algorithms', credits: 3 },
-        { code: 'COSC 340', name: 'Introduction to Computer Security', credits: 3 },
-        { code: 'ECCE 434', name: 'Database Systems', credits: 3 },
-        { code: 'BUSS XXX', name: 'Business Elective', credits: 3 },
-        { code: 'Technical Elective', name: 'Technical Elective Course', credits: 3 }
+        {
+          code: 'COSC 312',
+          name: 'Design and Analysis of Algorithms',
+          credits: 3
+        },
+  
+        {
+          code: 'COSC 320',
+          name: 'Principles of Programming Languages',
+          credits: 3
+        },
+  
+        {
+          code: 'COSC 330',
+          name: 'Introduction to Artificial Intelligence',
+          credits: 3
+        },
+  
+        {
+          code: 'COSC 340',
+          name: 'Introduction to Computer Security',
+          credits: 3
+        },
+  
+        {
+          code: 'GENS 300',
+          name: 'Career Preparation',
+          credits: 1
+        }
+  
       ],
       Summer: [
-        { code: 'GENS 300', name: 'Career Preparation', credits: 1 },
-        { code: 'BUSS 322', name: 'Fundamentals of Innovation and Entrepreneurship', credits: 3 }
+  
+        {
+          code: 'ENGR 399',
+          name: 'Internship',
+          credits: 1
+        }
       ]
     },
-    'Senior': {
+  
+    Senior: {
       Fall: [
-        { code: 'COSC 497', name: 'Senior Design Project I', credits: 3 },
-        { code: 'HUMA XXX', name: 'Islamic/Arabic Studies Elective', credits: 3 },
-        { code: 'HUMA XXX', name: 'UAE Studies Elective', credits: 3 },
-        { code: 'Technical Elective', name: 'Technical Elective Course', credits: 3 },
-        { code: 'Technical Elective', name: 'Technical Elective Course', credits: 3 }
+  
+        {
+          code: 'ECCE 434',
+          name: 'Database Systems',
+          credits: 3
+        },
+  
+        {
+          code: 'COSC 497',
+          name: 'Senior Design Project I',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        }
       ],
       Spring: [
-        { code: 'COSC 498', name: 'Senior Design Project II', credits: 3 },
-        { code: 'Technical Elective', name: 'Technical Elective Course', credits: 3 },
-        { code: 'Technical Elective', name: 'Technical Elective Course', credits: 3 },
-        { code: 'GENS 400', name: 'Enhancing Employability & Job Readiness', credits: 1 }
+        {
+          code: 'COSC 498',
+          name: 'Senior Design Project II',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        },
+        {
+          code: 'Technical Elective',
+          name: 'Technical Elective Course',
+          credits: 3
+        },
+        {
+          code: 'GENS 400',
+          name: 'Enhancing Employability & Job Readiness',
+          credits: 1
+        }
+      ],
+      Summer: [
+        {
+          code: 'ENGR 399',
+          name: 'Internship',
+          credits: 1
+        }
       ]
     }
   };
+
 
   let hoveredCode = null;
   let clickedCode = null;
