--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
         { code: 'PHYS 121', name: 'University Physics I', credits: 4 },
         { code: 'COSC 114', name: 'Introduction to Computing Using Python', credits: 4 },
         {
-          code: 'BUSS XXX',
-          name: 'Business Elective',
+          code: 'HUMA/BUSS XXX',
+          name: 'Any HUMA/BUSS Elective',
           credits: 3
         }
       ],
