--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       unlocks: []
     },
     // Sophomore-summer humanities elective
-    'HUMA XXX (UAE Studies)': {
+    'HUMA 105/106 (UAE Studies)': {
       prereqs: [],
       unlocks: []
     },
