--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           credits: 3
         },
         {
-          code: 'ECCE 342',
+          code: 'COSC 310',
           name: 'Data Structure and Algorithms',
           credits: 3
         },
