--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     --------------------------------------------- */
     .legend-bubble {
       /* shape & style, but no more position: fixed */
+      position: fixed;
       display: flex;
       align-items: center;
       gap: 1rem;
@@ -461,7 +462,7 @@
         { code: 'PHYS 121', name: 'University Physics I', credits: 4 },
         { code: 'COSC 114', name: 'Introduction to Computing Using Python', credits: 4 },
         {
-          code: 'HUMA/BUSS XXX',
+          code: 'HUMA/BUSS 105/106',
           name: 'Any HUMA/BUSS Elective',
           credits: 3
         }
