--- a/index.html
+++ b/index.html
@@ -36,36 +36,32 @@
       overflow: hidden;
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom right, var(--gray-50), var(--slate-100));
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end; /* Start layout from bottom */
     }
 
     .container {
       height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center; /* Center content vertically */
-      padding: 0.25rem;
+      justify-content: space-evenly; /* Distribute elements evenly */
+      padding: 0.5rem 1rem;
       max-width: 100%;
       margin: 0 auto;
     }
 
     .top-bar {
       display: flex;
-      flex-direction: column; /* Stack items vertically */
+      flex-direction: column; /* Stack elements vertically */
       align-items: center; /* Center items horizontally */
-      padding: 0.25rem;
-      position: sticky;
-      top: 0;
-      z-index: 20;
+      gap: 1rem; /* Add space between title and legend */
+      padding: 1rem;
       background: rgba(255, 255, 255, 0.9);
       backdrop-filter: blur(8px);
-      margin-bottom: 0.25rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
     }
 
     .title {
-      font-size: clamp(0.8rem, 1.5vw, 1.4rem);
+      font-size: clamp(1rem, 2.5vw, 2rem);
       font-weight: bold;
       background: linear-gradient(to right, var(--indigo-500), var(--purple-600));
       -webkit-background-clip: text;
@@ -74,7 +70,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 50%;
+      text-align: center;
     }
 
     .title::after {
@@ -83,37 +79,67 @@
 
     .legend-bubble {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 0.25rem;
+      gap: 0.5rem; /* Add space between legend items */
       background-color: rgba(255, 255, 255, 0.9);
       backdrop-filter: blur(6px);
       border: 1px solid var(--gray-200);
       border-radius: 9999px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
-      padding: 0.25rem 0.5rem;
+      padding: 1rem;
       min-width: fit-content;
-      margin-top: 0.5rem; /* Add space below title */
     }
 
     .legend-text {
-      font-size: 0.65rem;
-      font-weight: 500;
+      font-size: 0.85rem;
+      font-weight: 600;
       color: var(--gray-600);
+      text-align: center;
     }
 
     .legend-colors {
       display: flex;
       align-items: center;
-      gap: 0.25rem;
+      gap: 1rem; /* Add space between legend items */
     }
+
+    .legend-item {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 0.85rem;
+      color: var(--gray-600);
+    }
+
+    .legend-dot {
+      width: 0.6rem;
+      height: 0.6rem;
+      border-radius: 9999px;
+    }
+
+    .dot-amber { background-color: var(--amber-400); }
+    .dot-emerald { background-color: var(--emerald-400); }
 
     .year-grid {
       display: grid;
-      gap: 0.25rem;
-      flex: 1;
+      gap: 1rem;
       grid-template-columns: repeat(4, 1fr);
       align-items: start;
+      height: calc(100vh - 10rem); /* Adjust for space with top-bar */
+      overflow: hidden;
+    }
+
+    .year-block {
+      background-color: rgba(255, 255, 255, 0.7);
+      backdrop-filter: blur(4px);
+      border: 1px solid var(--gray-200);
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
       overflow: hidden;
     }
 
