--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 50%;
+      position:relative;
+      left: 1.9%;
     }
 
     .title::after {
@@ -89,6 +91,8 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.06);
       padding: 0.25rem 0.5rem;
       min-width: fit-content;
+      position:relative;
+      right: 1.9%;
     }
 
     .legend-text {
@@ -145,6 +149,7 @@
     }
 
     .year-title {
+      text-align: center;
       font-size: clamp(0.7rem, 1.2vw, 1rem);
       font-weight: 600;
       color: var(--gray-700);
@@ -153,6 +158,7 @@
       background: rgba(255,255,255,0.9);
       padding: 0.25rem 0;
       z-index: 10;
+      
     }
 
     .term {
@@ -162,10 +168,11 @@
     }
 
     .term-title {
-      font-size: clamp(0.65rem, 1vw, 0.875rem);
+      font-size: clamp(0.7rem, 1.05vw, 0.88rem);
       font-weight: 600;
       color: var(--gray-600);
       margin-bottom: 0.25rem;
+      margin-top: 0.25rem;
     }
 
     .course-grid {
@@ -204,14 +211,15 @@
     .course-name {
       font-size: clamp(0.55rem, 0.7vw, 0.7rem);
       color: var(--gray-600);
-      overflow-wrap: break-word;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
+      display: -webkit-box; /* Enable -webkit-line-clamp */
+      -webkit-line-clamp: 1; /* Limit to 1 line */
+      -webkit-box-orient: vertical; /* Define the orientation */
+      overflow: hidden; /* Hide overflowing text */
+      text-overflow: ellipsis; /* Add ellipsis for truncated text */
       padding-right: 1.5rem;
       margin-bottom: 0.25rem;
     }
+
 
     .course-credits {
       position: absolute;
