--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@
             min-height: auto; /* Allow the grid to grow based on content */
             overflow-y: auto; /* Enable scrolling within the grid */
         }
+        .year-block {
+          overflow-y: hidden;
+        }
     }
 
 
