--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>POL</title>
+  <title>Responsive CS Curriculum</title>
   <style>
     :root {
       --gray-50: #fafafa;
@@ -24,6 +24,7 @@
       --emerald-400: #34d399;
     }
 
+    /* Global Styles */
     * {
       box-sizing: border-box;
       margin: 0;
@@ -32,35 +33,35 @@
 
     html, body {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       overflow: hidden;
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom right, var(--gray-50), var(--slate-100));
     }
 
+    /* Container with Flexbox */
     .container {
       display: flex;
       flex-direction: column;
-      height: 100vh;
-      width: 100vw;
-      padding: 0.25rem;
-      margin: 0;
+      height: 100%;
+      width: 100%;
     }
 
+    /* Top Bar Styling */
     .top-bar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.25rem;
-      height: 3rem;
+      padding: 0.5rem 1rem;
       background: rgba(255,255,255,0.9);
       backdrop-filter: blur(8px);
       z-index: 20;
       flex-shrink: 0;
+      height: 60px;
     }
 
     .title {
-      font-size: clamp(0.8rem, 1.5vw, 1.4rem);
+      font-size: clamp(1rem, 2vw, 1.5rem);
       font-weight: bold;
       background: linear-gradient(to right, var(--indigo-500), var(--purple-600));
       -webkit-background-clip: text;
@@ -68,9 +69,7 @@
       color: transparent;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 50%;
-      position: relative;
-      left: 0;
+      max-width: 60%;
     }
 
     .title::after {
@@ -80,21 +79,19 @@
     .legend-bubble {
       display: flex;
       align-items: center;
-      gap: 0.25rem;
+      gap: 0.5rem;
       background-color: rgba(255,255,255,0.9);
       backdrop-filter: blur(6px);
       border: 1px solid var(--gray-200);
       border-radius: 9999px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-      padding: 0.25rem 0.5rem;
+      padding: 0.5rem 1rem;
       min-width: fit-content;
-      position: relative;
-      right: 0;
       flex-shrink: 0;
     }
 
     .legend-text {
-      font-size: clamp(0.7rem, 1.5vw, 0.8rem);
+      font-size: clamp(0.8rem, 1.2vw, 1rem);
       font-weight: 500;
       color: var(--gray-600);
     }
@@ -102,94 +99,102 @@
     .legend-colors {
       display: flex;
       align-items: center;
-      gap: 0.25rem;
+      gap: 0.5rem;
     }
 
     .legend-item {
       display: flex;
       align-items: center;
       gap: 0.25rem;
-      font-size: clamp(0.7rem, 1.5vw, 0.8rem);
+      font-size: clamp(0.8rem, 1.2vw, 1rem);
       color: var(--gray-600);
     }
 
     .legend-dot {
-      width: 0.4rem;
-      height: 0.4rem;
+      width: 0.6rem;
+      height: 0.6rem;
       border-radius: 9999px;
     }
     .dot-amber  { background-color: var(--amber-400); }
     .dot-emerald{ background-color: var(--emerald-400); }
 
+    /* Year Grid Styling with CSS Grid */
     .year-grid {
       display: grid;
-      gap: 0.25rem;
+      gap: 0.5rem;
       flex: 1;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      align-items: start;
+      padding: 1rem;
       overflow: hidden;
-      padding-bottom: 0.25rem;
+      /* Adjust grid columns based on screen size */
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-auto-rows: minmax(200px, auto);
     }
 
+    /* Year Block Styling */
     .year-block {
-      background-color: rgba(255,255,255,0.7);
+      background-color: rgba(255,255,255,0.8);
       backdrop-filter: blur(4px);
       border: 1px solid var(--gray-200);
       border-radius: 0.5rem;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      padding: 0.25rem;
+      padding: 0.5rem;
       display: flex;
       flex-direction: column;
-      gap: 0.25rem;
+      gap: 0.5rem;
       height: 100%;
-      overflow-y: auto;
+      overflow: hidden;
     }
 
     .year-title {
       text-align: center;
-      font-size: clamp(0.7rem, 1.2vw, 1rem);
+      font-size: clamp(1rem, 1.5vw, 1.2rem);
       font-weight: 600;
       color: var(--gray-700);
       position: sticky;
       top: 0;
       background: rgba(255,255,255,0.9);
-      padding: 0.25rem 0;
+      padding: 0.5rem 0;
       z-index: 10;
     }
 
     .term {
       display: flex;
       flex-direction: column;
-      gap: 0.25rem;
+      gap: 0.3rem;
+      flex: 1;
+      overflow: hidden;
     }
 
     .term-title {
-      font-size: clamp(0.7rem, 1.05vw, 0.88rem);
+      font-size: clamp(0.9rem, 1.2vw, 1rem);
       font-weight: 600;
       color: var(--gray-600);
-      margin-bottom: 0.25rem;
-      margin-top: 0.25rem;
+      margin-bottom: 0.3rem;
+      margin-top: 0.3rem;
     }
 
     .course-grid {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 0.25rem;
+      gap: 0.3rem;
+      overflow: hidden;
     }
 
+    /* Course Card Styling */
     .course-card {
       position: relative;
       border-radius: 0.25rem;
       border: 1px solid var(--gray-100);
       box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-      padding: 0.25rem 0.25rem 1rem 0.25rem;
+      padding: 0.5rem;
       transition: box-shadow 0.2s, transform 0.2s;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      min-height: 3rem;
+      justify-content: space-between;
+      min-height: 60px;
       cursor: pointer;
       background-color: white;
+      overflow: hidden;
     }
 
     .course-card:hover {
@@ -198,34 +203,34 @@
     }
 
     .course-code {
-      font-size: clamp(0.6rem, 0.8vw, 0.75rem);
+      font-size: clamp(0.8rem, 1vw, 1rem);
       font-weight: 700;
       color: var(--indigo-900);
-      margin-bottom: 2px;
+      margin-bottom: 0.3rem;
     }
 
     .course-name {
-      font-size: clamp(0.55rem, 0.7vw, 0.7rem);
+      font-size: clamp(0.7rem, 0.9vw, 0.9rem);
       color: var(--gray-600);
       display: -webkit-box; /* Enable -webkit-line-clamp */
-      -webkit-line-clamp: 1; /* Limit to 1 line */
+      -webkit-line-clamp: 2; /* Limit to 2 lines */
       -webkit-box-orient: vertical; /* Define the orientation */
       overflow: hidden; /* Hide overflowing text */
       text-overflow: ellipsis; /* Add ellipsis for truncated text */
-      padding-right: 1.5rem;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.3rem;
     }
 
     .course-credits {
       position: absolute;
-      bottom: 2px;
-      right: 4px;
-      font-size: clamp(0.5rem, 0.6vw, 0.65rem);
+      bottom: 5px;
+      right: 10px;
+      font-size: clamp(0.6rem, 0.8vw, 0.8rem);
       font-weight: 600;
       color: var(--indigo-400-text);
       padding: 0 2px;
     }
 
+    /* Highlight Classes */
     .bg-indigo-100 { background-color: var(--indigo-100) !important; }
     .ring-2-indigo { box-shadow: 0 0 0 2px var(--indigo-500) !important; }
     .bg-amber-50 { background-color: var(--amber-50) !important; }
@@ -233,16 +238,19 @@
     .bg-emerald-50 { background-color: var(--emerald-50) !important; }
     .ring-2-emerald { box-shadow: 0 0 0 2px var(--emerald-400) !important; }
 
-    /* Media Queries for Responsiveness */
+    /* Media Queries for Enhanced Responsiveness */
 
-    /* Tablets and small desktops */
+    /* Tablets and Small Desktops */
     @media (min-width: 768px) and (max-width: 1024px) {
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
+      .course-card {
+        min-height: 70px;
+      }
     }
 
-    /* Large desktops */
+    /* Large Desktops */
     @media (min-width: 1025px) {
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -253,30 +261,30 @@
     @media (max-width: 640px) {
       .year-grid {
         grid-template-columns: 1fr;
+        padding: 0.5rem;
       }
       .course-card {
-        min-height: 3.5rem;
+        min-height: 80px;
       }
     }
 
-    /* Very small phones */
+    /* Very Small Phones */
     @media (max-width: 380px) {
-      .year-grid {
-        grid-template-columns: 1fr;
-      }
       .title {
         display: none;
       }
       .legend-bubble {
-        position: relative;
         width: 100%;
-        display: flex;
         justify-content: center;
-        align-items: center;
+        padding: 0.5rem 0;
+      }
+      .year-grid {
+        grid-template-columns: 1fr;
+        padding: 0.5rem;
       }
     }
 
-    /* Adjustments for iPads and similar devices */
+    /* Adjustments for iPads and Similar Devices */
     @media (min-width: 768px) and (max-width: 1366px) and (hover: none) and (pointer: coarse) {
       html, body {
         overflow-y: auto; /* Enable scrolling if necessary */
@@ -713,7 +721,7 @@
 
     function renderApp() {
       const app = document.getElementById('app');
-      // Clear
+      // Clear previous content
       while (app.firstChild) {
         app.removeChild(app.firstChild);
       }
@@ -723,7 +731,7 @@
       yearGrid.className = "year-grid";
       app.appendChild(yearGrid);
 
-      // MOUSEMOVE => handle hover if not locked
+      // Mouse move event for hover
       yearGrid.addEventListener('mousemove', e => {
         if (!clickedCode) {
           const card = e.target.closest('.course-card');
@@ -740,12 +748,12 @@
         }
       });
 
-      // CLICK => toggle highlight or clear if empty space
+      // Click event for selection
       yearGrid.addEventListener('click', e => {
         const card = e.target.closest('.course-card');
         if (card) {
           const code = card.getAttribute('data-code');
-          // if same code => unselect
+          // Toggle selection
           if (clickedCode === code) {
             clickedCode = null;
             hoveredCode = null;
@@ -753,7 +761,7 @@
             clickedCode = code;
           }
         } else {
-          // empty space => clear
+          // Clicked on empty space
           clickedCode = null;
           hoveredCode = null;
         }
@@ -770,7 +778,7 @@
         yearTitle.textContent = yearName;
         yearDiv.appendChild(yearTitle);
 
-        // terms
+        // Terms
         Object.entries(terms).forEach(([termName, courses]) => {
           const termDiv = document.createElement('div');
           termDiv.className = "term";
@@ -792,7 +800,7 @@
             const highlightClasses = buildHighlightClasses(course.code, isSelected);
             highlightClasses.forEach(c => cardDiv.classList.add(c));
 
-            // content
+            // Content
             const codeDiv = document.createElement('div');
             codeDiv.className = "course-code";
             codeDiv.textContent = course.code;
