--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive CS Curriculum</title>
+  <title>RIB</title>
   <style>
     :root {
       --gray-50: #fafafa;
@@ -265,6 +265,14 @@
       }
       .course-card {
         min-height: 80px;
+      }
+      .top-bar {
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+      }
+      .legend-bubble {
+        margin-top: 0.5rem;
       }
     }
 
