--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>RIB</title>
+  <title>Responsive CS Curriculum</title>
   <style>
     :root {
       --gray-50: #fafafa;
@@ -45,6 +45,8 @@
       flex-direction: column;
       height: 100%;
       width: 100%;
+      padding: 0.25rem;
+      margin: 0;
     }
 
     /* Top Bar Styling */
@@ -52,16 +54,16 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.5rem 1rem;
+      padding: 0.25rem 0.5rem;
+      height: 3rem;
       background: rgba(255,255,255,0.9);
       backdrop-filter: blur(8px);
       z-index: 20;
       flex-shrink: 0;
-      height: 60px;
     }
 
     .title {
-      font-size: clamp(1rem, 2vw, 1.5rem);
+      font-size: clamp(0.8rem, 1.5vw, 1.4rem);
       font-weight: bold;
       background: linear-gradient(to right, var(--indigo-500), var(--purple-600));
       -webkit-background-clip: text;
@@ -69,7 +71,9 @@
       color: transparent;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 60%;
+      max-width: 50%;
+      position: relative;
+      left: 0;
     }
 
     .title::after {
@@ -79,19 +83,21 @@
     .legend-bubble {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.25rem;
       background-color: rgba(255,255,255,0.9);
       backdrop-filter: blur(6px);
       border: 1px solid var(--gray-200);
       border-radius: 9999px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.06);
-      padding: 0.5rem 1rem;
+      padding: 0.25rem 0.5rem;
       min-width: fit-content;
+      position: relative;
+      right: 0;
       flex-shrink: 0;
     }
 
     .legend-text {
-      font-size: clamp(0.8rem, 1.2vw, 1rem);
+      font-size: clamp(0.7rem, 1.5vw, 0.8rem);
       font-weight: 500;
       color: var(--gray-600);
     }
@@ -99,20 +105,20 @@
     .legend-colors {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.25rem;
     }
 
     .legend-item {
       display: flex;
       align-items: center;
       gap: 0.25rem;
-      font-size: clamp(0.8rem, 1.2vw, 1rem);
+      font-size: clamp(0.7rem, 1.5vw, 0.8rem);
       color: var(--gray-600);
     }
 
     .legend-dot {
-      width: 0.6rem;
-      height: 0.6rem;
+      width: 0.4rem;
+      height: 0.4rem;
       border-radius: 9999px;
     }
     .dot-amber  { background-color: var(--amber-400); }
@@ -121,80 +127,78 @@
     /* Year Grid Styling with CSS Grid */
     .year-grid {
       display: grid;
-      gap: 0.5rem;
+      gap: 0.25rem;
       flex: 1;
-      padding: 1rem;
-      overflow: hidden;
-      /* Adjust grid columns based on screen size */
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      grid-auto-rows: minmax(200px, auto);
+      align-items: start;
+      /* Removed overflow: hidden; */
+      padding-bottom: 0.25rem;
+      overflow-y: auto; /* Added to allow scrolling if content overflows */
     }
 
-    /* Year Block Styling */
     .year-block {
-      background-color: rgba(255,255,255,0.8);
+      background-color: rgba(255,255,255,0.7);
       backdrop-filter: blur(4px);
       border: 1px solid var(--gray-200);
       border-radius: 0.5rem;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      padding: 0.5rem;
+      padding: 0.25rem;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
-      height: 100%;
-      overflow: hidden;
+      gap: 0.25rem;
+      /* Removed height: 100%; */
+      /* Changed overflow-y to auto to allow scrolling within year-block if needed */
+      overflow-y: auto;
+      max-height: 100%; /* Ensures it doesn't exceed its container */
     }
 
     .year-title {
       text-align: center;
-      font-size: clamp(1rem, 1.5vw, 1.2rem);
+      font-size: clamp(0.7rem, 1.2vw, 1rem);
       font-weight: 600;
       color: var(--gray-700);
       position: sticky;
       top: 0;
       background: rgba(255,255,255,0.9);
-      padding: 0.5rem 0;
+      padding: 0.25rem 0;
       z-index: 10;
     }
 
     .term {
       display: flex;
       flex-direction: column;
-      gap: 0.3rem;
-      flex: 1;
-      overflow: hidden;
+      gap: 0.25rem;
     }
 
     .term-title {
-      font-size: clamp(0.9rem, 1.2vw, 1rem);
+      font-size: clamp(0.7rem, 1.05vw, 0.88rem);
       font-weight: 600;
       color: var(--gray-600);
-      margin-bottom: 0.3rem;
-      margin-top: 0.3rem;
+      margin-bottom: 0.25rem;
+      margin-top: 0.25rem;
     }
 
     .course-grid {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 0.3rem;
-      overflow: hidden;
+      gap: 0.25rem;
     }
 
-    /* Course Card Styling */
     .course-card {
       position: relative;
       border-radius: 0.25rem;
       border: 1px solid var(--gray-100);
       box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-      padding: 0.5rem;
+      padding: 0.25rem 0.25rem 1rem 0.25rem;
       transition: box-shadow 0.2s, transform 0.2s;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      min-height: 60px;
+      justify-content: flex-start;
+      min-height: 3rem;
       cursor: pointer;
       background-color: white;
-      overflow: hidden;
+      /* Ensure course-card doesn't exceed its container */
+      max-height: 100%;
     }
 
     .course-card:hover {
@@ -203,34 +207,34 @@
     }
 
     .course-code {
-      font-size: clamp(0.8rem, 1vw, 1rem);
+      font-size: clamp(0.6rem, 0.8vw, 0.75rem);
       font-weight: 700;
       color: var(--indigo-900);
-      margin-bottom: 0.3rem;
+      margin-bottom: 2px;
     }
 
     .course-name {
-      font-size: clamp(0.7rem, 0.9vw, 0.9rem);
+      font-size: clamp(0.55rem, 0.7vw, 0.7rem);
       color: var(--gray-600);
       display: -webkit-box; /* Enable -webkit-line-clamp */
-      -webkit-line-clamp: 2; /* Limit to 2 lines */
+      -webkit-line-clamp: 1; /* Limit to 1 line */
       -webkit-box-orient: vertical; /* Define the orientation */
       overflow: hidden; /* Hide overflowing text */
       text-overflow: ellipsis; /* Add ellipsis for truncated text */
-      margin-bottom: 0.3rem;
+      padding-right: 1.5rem;
+      margin-bottom: 0.25rem;
     }
 
     .course-credits {
       position: absolute;
-      bottom: 5px;
-      right: 10px;
-      font-size: clamp(0.6rem, 0.8vw, 0.8rem);
+      bottom: 2px;
+      right: 4px;
+      font-size: clamp(0.5rem, 0.6vw, 0.65rem);
       font-weight: 600;
       color: var(--indigo-400-text);
       padding: 0 2px;
     }
 
-    /* Highlight Classes */
     .bg-indigo-100 { background-color: var(--indigo-100) !important; }
     .ring-2-indigo { box-shadow: 0 0 0 2px var(--indigo-500) !important; }
     .bg-amber-50 { background-color: var(--amber-50) !important; }
@@ -238,19 +242,19 @@
     .bg-emerald-50 { background-color: var(--emerald-50) !important; }
     .ring-2-emerald { box-shadow: 0 0 0 2px var(--emerald-400) !important; }
 
-    /* Media Queries for Enhanced Responsiveness */
+    /* Media Queries for Responsiveness */
 
-    /* Tablets and Small Desktops */
+    /* Tablets and small desktops */
     @media (min-width: 768px) and (max-width: 1024px) {
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
       .course-card {
-        min-height: 70px;
+        min-height: 3.5rem;
       }
     }
 
-    /* Large Desktops */
+    /* Large desktops */
     @media (min-width: 1025px) {
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -261,38 +265,40 @@
     @media (max-width: 640px) {
       .year-grid {
         grid-template-columns: 1fr;
-        padding: 0.5rem;
       }
       .course-card {
-        min-height: 80px;
+        min-height: 3.5rem;
       }
-      .top-bar {
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
+      /* Ensure the container doesn't cause overflow */
+      html, body {
+        overflow: hidden;
       }
-      .legend-bubble {
-        margin-top: 0.5rem;
+      .container {
+        height: 100%;
+      }
+      .year-grid {
+        height: calc(100% - 3rem); /* Adjust height based on top-bar */
       }
     }
 
-    /* Very Small Phones */
+    /* Very small phones */
     @media (max-width: 380px) {
+      .year-grid {
+        grid-template-columns: 1fr;
+      }
       .title {
         display: none;
       }
       .legend-bubble {
+        position: relative;
         width: 100%;
+        display: flex;
         justify-content: center;
-        padding: 0.5rem 0;
-      }
-      .year-grid {
-        grid-template-columns: 1fr;
-        padding: 0.5rem;
+        align-items: center;
       }
     }
 
-    /* Adjustments for iPads and Similar Devices */
+    /* Adjustments for iPads and similar devices */
     @media (min-width: 768px) and (max-width: 1366px) and (hover: none) and (pointer: coarse) {
       html, body {
         overflow-y: auto; /* Enable scrolling if necessary */
