--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive CS Curriculum</title>
+  <title>QQQ</title>
   <style>
     :root {
       --gray-50: #fafafa;
@@ -131,9 +131,8 @@
       flex: 1;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       align-items: start;
-      /* Removed overflow: hidden; */
       padding-bottom: 0.25rem;
-      overflow-y: auto; /* Added to allow scrolling if content overflows */
+      overflow-y: auto; /* Allow vertical scrolling */
     }
 
     .year-block {
@@ -147,9 +146,8 @@
       flex-direction: column;
       gap: 0.25rem;
       /* Removed height: 100%; */
-      /* Changed overflow-y to auto to allow scrolling within year-block if needed */
-      overflow-y: auto;
-      max-height: 100%; /* Ensures it doesn't exceed its container */
+      overflow-y: auto; /* Allow scrolling within year block if necessary */
+      max-height: 100%; /* Ensure it doesn't exceed its container */
     }
 
     .year-title {
@@ -180,7 +178,7 @@
 
     .course-grid {
       display: grid;
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(4, 1fr); /* Reverted to 4 columns */
       gap: 0.25rem;
     }
 
@@ -249,6 +247,9 @@
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
+      .course-grid {
+        grid-template-columns: repeat(3, 1fr); /* Adjust columns for medium screens */
+      }
       .course-card {
         min-height: 3.5rem;
       }
@@ -259,12 +260,18 @@
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       }
+      .course-grid {
+        grid-template-columns: repeat(4, 1fr); /* Ensure 4 columns on large screens */
+      }
     }
 
     /* Phones */
     @media (max-width: 640px) {
       .year-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); /* Allow more columns on small screens */
+      }
+      .course-grid {
+        grid-template-columns: repeat(2, 1fr); /* Revert to original grid with 4 courses per row on phone */
       }
       .course-card {
         min-height: 3.5rem;
@@ -284,7 +291,10 @@
     /* Very small phones */
     @media (max-width: 380px) {
       .year-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Allow more columns on very small screens */
+      }
+      .course-grid {
+        grid-template-columns: repeat(2, 1fr); /* Maintain 2 columns */
       }
       .title {
         display: none;
