--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
       flex: 1;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       align-items: start;
+      /* Removed overflow: hidden; */
       padding-bottom: 0.25rem;
-      overflow-y: auto; /* Allow vertical scrolling */
-      height: 100%; /* Ensure full height to prevent empty space */
+      overflow-y: auto; /* Added to allow scrolling if content overflows */
     }
 
     .year-block {
@@ -147,8 +147,9 @@
       flex-direction: column;
       gap: 0.25rem;
       /* Removed height: 100%; */
-      overflow-y: auto; /* Allow scrolling within year block if necessary */
-      max-height: 100%; /* Ensure it doesn't exceed its container */
+      /* Changed overflow-y to auto to allow scrolling within year-block if needed */
+      overflow-y: auto;
+      max-height: 100%; /* Ensures it doesn't exceed its container */
     }
 
     .year-title {
@@ -179,7 +180,7 @@
 
     .course-grid {
       display: grid;
-      grid-template-columns: repeat(4, 1fr); /* Reverted to 4 columns */
+      grid-template-columns: 1fr;
       gap: 0.25rem;
     }
 
@@ -248,9 +249,6 @@
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
-      .course-grid {
-        grid-template-columns: repeat(3, 1fr); /* Adjust columns for medium screens */
-      }
       .course-card {
         min-height: 3.5rem;
       }
@@ -261,18 +259,12 @@
       .year-grid {
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       }
-      .course-grid {
-        grid-template-columns: repeat(4, 1fr); /* Ensure 4 columns on large screens */
-      }
     }
 
     /* Phones */
     @media (max-width: 640px) {
       .year-grid {
-        grid-template-columns: repeat(2, 1fr); /* Set to 2 columns on phones */
-      }
-      .course-grid {
-        grid-template-columns: repeat(2, 1fr); /* Maintain 2 columns within term */
+        grid-template-columns: 1fr;
       }
       .course-card {
         min-height: 3.5rem;
@@ -292,10 +284,7 @@
     /* Very small phones */
     @media (max-width: 380px) {
       .year-grid {
-        grid-template-columns: repeat(2, 1fr); /* Maintain 2 columns on very small screens */
-      }
-      .course-grid {
-        grid-template-columns: repeat(2, 1fr); /* Maintain 2 columns */
+        grid-template-columns: 1fr;
       }
       .title {
         display: none;
@@ -894,4 +883,3 @@
   </script>
 </body>
 </html>
-
