--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive CS Curriculum</title>
+  <title>CCC</title>
   <style>
     :root {
       --gray-50: #fafafa;
@@ -131,9 +131,9 @@
       flex: 1;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       align-items: start;
-      /* Removed overflow: hidden; */
       padding-bottom: 0.25rem;
-      overflow-y: auto; /* Added to allow scrolling if content overflows */
+      overflow-y: auto; /* Allow vertical scrolling */
+      height: 100%; /* Ensure full height to prevent empty space */
     }
 
     .year-block {
@@ -147,9 +147,8 @@
       flex-direction: column;
       gap: 0.25rem;
       /* Removed height: 100%; */
-      /* Changed overflow-y to auto to allow scrolling within year-block if needed */
-      overflow-y: auto;
-      max-height: 100%; /* Ensures it doesn't exceed its container */
+      overflow-y: auto; /* Allow scrolling within year block if necessary */
+      max-height: 100%; /* Ensure it doesn't exceed its container */
     }
 
     .year-title {
@@ -266,6 +265,9 @@
       .year-grid {
         grid-template-columns: 1fr;
       }
+      .course-grid {
+        grid-template-columns: repeat(4, 1fr); /* Set to 4 columns on phones */
+      }
       .course-card {
         min-height: 3.5rem;
       }
@@ -276,9 +278,10 @@
       .container {
         height: 100%;
       }
-      .year-grid {
-        height: calc(100% - 3rem); /* Adjust height based on top-bar */
-      }
+      /* Removed height adjustment to prevent cutting off */
+      /* .year-grid {
+        height: calc(100% - 3rem); 
+      } */
     }
 
     /* Very small phones */
